# CoIN

./: .gitignore  README.md  cog.yaml  dataset.md  pyproject.toml  train_and_test.sh  works.sh
CLIT/peft/: __init__.py  mapping.py  peft_model.py  shared.py
CoIN/peft/: __init__.py  import_utils.py  mapping.py  peft_model.py  shared.py
ETrain/Dataset/: __init__.py  dataset.py
ETrain/Eval/: eval_GenealKnowledge.py  evaluate_score.py  to_eval_prompt.txt
ETrain/Models/: __init__.py
ETrain/Train/: Base_trainer.py
ETrain/eval/: eval_gpt_review_visual.py  model_qa.py  model_vqa_cl.py  model_vqa_loader.py  model_vqa_qbench.py  run_llava.py
ETrain/serve/: cli.py  controller.py  gradio_web_server.py  model_worker.py  test_message.py
FigurePlot/: radio_plot.py
llava/: __init__.py  utils.py
llava/LLaVA_model/: builder.py  consolidate.py  llava_arch.py  make_delta.py
llava/MiniGPT/: minigpt_base.py  minigpt_v2.py  modeling_llama.py
llava/eval/: eval_gpt_review_visual_cl.py  model_vqa.py  model_vqa_cl.py  model_vqa_loader.py  model_vqa_mmbench.py  model_vqa_qbench.py  run_llava.py
llava/model/: builder.py  llava_arch.py
llava/serve/: cli.py  model_worker.py
llava/train/: train.py  train_CLIT.py  train_MOE.py  train_mem_CLIT.py  train_mem_MOE.py
playground/: copy_to_qwen.py  create_prompt.py  evaluate_score.py
playground/playground/: create_prompt.py
scripts/: convert_vizwiz_for_submission.py  convert_vqav2_for_submission.py  finetune.sh  merge_lora_weights.py  pretrain.sh  pretrain_xformers.sh
scripts/Eval_GeneralKnowledge/: create_prompt.sh  eval_prompt.sh  eval_prompt_slim.sh  eval_prompt_slim_llava.sh  eval_prompt_slim_minigpt.sh
(+2062 files in other folders)
